--- a/salesjs.API/Web.config
+++ b/salesjs.API/Web.config
@@ -11,10 +11,15 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=jisvsvr2.database.windows.net;Initial Catalog=salesjsdb;Persist Security Info=True;User=jisv;Password=#Dev2018#" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.6.1" />
+    <compilation debug="true" targetFramework="4.6.1">
+      <assemblies>
+        <add assembly="System.Net.Http.WebRequest, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
